# autosus_2024

./: README.md  nova_datoteka.txt
install/: local_setup.sh  setup.sh
install/lbr_description/lib/lbr_description/: state_publisher
install/lbr_description/share/lbr_description/: iiwa14_description.urdf  lbr_stack_description.urdf.xacro  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/learning_tf2_py/lib/learning_tf2_py/: goal_broadcaster  tf2_world_broadcast  turtle_control
install/learning_tf2_py/share/learning_tf2_py/: package.sh
install/learning_tf2_py/share/learning_tf2_py/launch/: turtle_tf2.launch.py
install/py_pubsub/lib/py_pubsub/: brojcanik  kvadriranje_broja
install/py_pubsub/share/py_pubsub/: package.sh
log/: latest_build  latest_list
src/lbr_description/: package.xml  setup.cfg  setup.py
src/lbr_description/config/: rviz_config.rviz
src/lbr_description/launch/: view_robot.launch.py
src/lbr_description/lbr_description/: state_publisher.py
src/lbr_description/urdf/: iiwa14.urdf.xacro
src/learning_tf2_py/: package.xml  setup.py
src/learning_tf2_py/config/: learning_tf2_py.rviz
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: subscriber_member_function.py
