<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aaronb.0103@gmail.com">aaron</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
